# B4_rinko_torchaudio

./: .gitignore  README.md  prep.md  pyproject.toml
configs/: baseline.yaml
discontinued/: README.md  curriculum.md  plan.md
docs/: authoring_guide.md  course_design.md  curriculum.md  handoff.md  operation.md
docs/sessions/: index.md  session0_prep.md  session1_kickoff_data.md  session2_model.md  session3_train.md  session4_eval_tune.md
materials/: 00_prep.md  01_data.ipynb  02_model.ipynb  03_train.ipynb  04_eval_tune.ipynb
notebooks/: 00_prep.ipynb  01_data.ipynb  01_setup_and_data.ipynb  02_model.ipynb  03_train.ipynb  03_train_wandb.ipynb  04_eval_repro.ipynb  04_eval_tune.ipynb  05_workshop.ipynb
scripts/: run_baseline.sh  smoke.py
src/kws/: __init__.py  data.py  evaluate.py  model.py  train.py  utils.py
tools/: README.md  gen_00_prep.py  gen_01_data.py  gen_01_setup_and_data.py  gen_02_model.py  gen_03_train.py  gen_03_train_wandb.py  gen_04_eval_repro.py  gen_04_eval_tune.py  gen_05_workshop.py  nbh.py  regen.sh
