[project]
name = "kws-tutorial"
version = "0.1.0"
description = "PyTorch 音声情報処理チュートリアル (SPEECHCOMMANDS / KWS)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "numpy<2",
    "matplotlib>=3.8",
    "soundfile>=0.12",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
    "wandb>=0.17",
    "ipykernel>=6.29",
]

# src/kws を `import kws` / `python -m kws.train` で使えるようにする（editable install）
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kws"]

# torch / torchaudio は PyTorch の CUDA(cu121) ホイールを使う．
# GPU マシンの CUDA に合わせて cu118 / cu124 などへ変えてよい．CPU だけなら下の index を消す．
[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchaudio = [{ index = "pytorch-cu121" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
]
